PBI #44558: fix start time issue when work shift ends midnight and refactor some

--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Content/Css/ScheduleStyles.css
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Content/Css/ScheduleStyles.css
@@ -1,4 +1,9 @@
-﻿.schedule-table-container > .container{
+﻿.schedule-request-form{
+	position: relative;
+	z-index: 1;
+}
+
+.schedule-table-container > .container{
 	padding: 0;
 }
 
